Remove jaxb dependencies from production code
These dependencies were introduced for Java11 compatibility.
By switching to the Java8 Base64 implementation they can be
eliminated. There is still a test-scoped dependency in the jersey
module, that will not be removed.